# napari-spatialdata

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  asv.conf.json  log.py  pyproject.toml  setup.cfg  test.py  tox.ini
.github/: BENCHMARK_FAIL_TEMPLATE.md  release.yml
.github/workflows/: benchmarks.yml  benchmarks_report.yml  release.yml  test.yml  test_and_deploy.yml
.napari/: DESCRIPTION.md
benchmarks/: Readme.md  benchmark.in  benchmark.txt  benchmark_model.py  benchmark_qt_widget.py
docs/: api.md  changelog.md  cli.md  conf.py  contributing.md  index.md  index.rst  limitations.md  template_usage.md
docs/notebooks/: example.ipynb  mibitof_analysis.ipynb  nanostring.ipynb  nanostring_analysis.ipynb  scatterwidget.ipynb  scatterwidget_annotation.ipynb  test.ipynb
docs/release-notes/: 0.2.3.md  future.md  index.md  release-latest.md
examples/: README  README.md  demo_datasets.py  merfish_spatialdata.py  raster_points_regions.py  raster_regions.py  shape_regions.py  spatialdata_demo.ipynb  spatialdata_empty.py  spatialdata_interactive.py  spatialdata_mibitof.py  spatialdata_nanostring.py  spatialdata_visium.py  view_spatialdata.py
napari_spatial_anndata/: __init__.py  _container.py  _controller.py  _coords.py  _io.py  _model.py  _utils.py  _view.py  _widget.py  _widgets.py  _writer.py  interactive.py  napari.yaml
napari_spatial_anndata/_constants/: _constants.py  _pkg_constants.py
napari_spatialdata/: __init__.py  _container.py  _controller.py  _coords.py  _io.py  _model.py  _utils.py  _view.py  _widgets.py  napari.yaml
napari_spatialdata/_constants/: _utils.py
src/napari_spatial_anndata/: __init__.py  _container.py  _controller.py  _model.py  _utils.py  _view.py  _widgets.py  interactive.py  napari.yaml
src/napari_spatial_anndata/_constants/: _constants.py  _pkg_constants.py
src/napari_spatial_anndata/_tests/: test_reader.py  test_widget.py
src/napari_spatialdata/: __init__.py  __main__.py  _annotationwidgets.py  _categoricals_utils.py  _container.py  _controller.py  _interactive.py  _model.py  _reader.py  _scatterwidgets.py  _sdata_widgets.py  _utils.py  _utils_from_scanpy.py  _view.py  _viewer.py  _widgets.py  interactive.py  napari.yaml
src/napari_spatialdata/_constants/: _constants.py  _pkg_constants.py  _utils.py  config.py
src/napari_spatialdata/constants/: _constants.py  _pkg_constants.py  _utils.py  config.py
src/napari_spatialdata/utils/: _categoricals_utils.py  _test_utils.py  _utils.py  _viewer_utils.py
tests/: conftest.py  test_3d_visualization.py  test_aaa.py  test_cli.py  test_interactive.py  test_reader.py  test_sample_data.py  test_scatterwidgets.py  test_spatialdata.py  test_utils.py  test_view.py  test_viewer.py  test_widget.py  test_widgets.py  test_writer.py
