[metadata]
name = napari-spatialdata
url = https://github.com/scverse/napari-spatialdata.git
author = giovanni palla
author_email = giov.pll@gmail.com
project_urls =
        Bug Tracker = https://github.com/scverse/napari-spatialdata/issues
        Documentation = https://spatialdata.scverse.org/projects/napari/en/latest/notebooks/spatialdata.html
        Source Code = https://github.com/scverse/napari-spatialdata
        User Support = https://github.com/scverse/napari-spatialdata/issues

license = BSD-3-Clause
description = Interactive visualization of spatial omics data with napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
include_package_data = True
python_requires = >=3.11
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    anndata>=0.12.0
    click
    cycler
    dask>=2025.2.0
    geopandas
    loguru
    matplotlib
    napari>=0.6.2
    napari-matplotlib>=3.0.2
    numba
    numpy
    packaging
    pandas
    pillow
    pyqtgraph
    qtpy
    scanpy
    scipy
    shapely
    scikit-learn
    spatialdata>=0.7.0dev1
    superqt
    typing_extensions>=4.8.0
    vispy
    xarray
    xarray-datatree

package_dir =
    =src


[options.extras_require]
bermuda =
    bermuda

test =
    loguru
    pytest
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-mock # https://pytest-mock.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    pre-commit>=2.9.0

doc =
    sphinx>=4.5
    sphinx-book-theme>=1.0.0
    myst-parser>=2.0.0
    sphinxcontrib-bibtex>=2.5.0
    sphinx-autodoc-typehints>=1.11.0
    sphinx-autobuild
    scanpydoc
    # For notebooks
    ipykernel
    ipython
    sphinx-copybutton
    sphinx-qt-documentation
    myst-nb>=1.0.0
    # used in the notebooks
    squidpy

readthedocs =
	pydantic>2

# this is just to trigger pip to check for pre-releases as well
pre =
    spatialdata>=0.7.0dev0

all =
    napari[pyqt5]

[options.packages.find]
where = src

[options.package_data]
napari_spatiadata = napari.yaml

[options.entry_points]
napari.manifest =
    napari-spatialdata = napari_spatialdata:napari.yaml
console_scripts =
  spatialdata = napari_spatialdata.__main__:main

[tool:pytest]
python_files = test_*.py
testpaths = tests/
xfail_strict = true
;qt_api=pyqt5
; addopts = -n auto
markers =
    use_thread_loader: mark a test that is intended to use the thread loader of data
